--- a/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/Pages/MainPage.xaml
+++ b/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/Pages/MainPage.xaml
@@ -1,11 +1,12 @@
 <TabbedPage 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:pages="clr-namespace:CustomAlarm.MAUI.Pages"
-    x:Class="CustomAlarm.MAUI.MainPage"
+    xmlns:local="clr-namespace:CustomAlarm.MAUI.Pages"
+    x:Class="CustomAlarm.MAUI.Pages.MainPage"
     BackgroundColor="{DynamicResource SecondaryColor}">
 
     <TabbedPage.Children>
-        <pages:HomePage />
+        <local:HomePage />
+        <local:CalendarPage />
     </TabbedPage.Children>
 </TabbedPage>
