--- a/poc/CustomAlarm.Xamarin/CustomAlarm.Xamarin/CustomAlarm.Xamarin/AppShell.xaml
+++ b/poc/CustomAlarm.Xamarin/CustomAlarm.Xamarin/CustomAlarm.Xamarin/AppShell.xaml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Shell xmlns="http://xamarin.com/schemas/2014/forms"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:local="clr-namespace:CustomAlarm.Xamarin"
        xmlns:views="clr-namespace:CustomAlarm.Xamarin.Views"
        x:Class="CustomAlarm.Xamarin.AppShell">
     <!-- Display a bottom tab bar containing two tabs -->
     <TabBar>
         <ShellContent Title="Notes"
                       Icon="icon_feed.png"
-                      ContentTemplate="{DataTemplate views:NotesPage}" />
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:NotesPage}}" /> 
         <ShellContent Title="About"
                       Icon="icon_about.png"
-                      ContentTemplate="{DataTemplate views:AboutPage}" />
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:AboutPage}}" />
     </TabBar>
 </Shell>
